--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400&display=swap');
 /* !BASE STYLES/RESET */
 
+*,
+*::before,
+*::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root{
     --light-color: #f3f3fe;
     --dark-color: #363636;
@@ -12,14 +20,147 @@
     --container-padding: 1.5rem;
     --section-vertical-spacing: 8rem;
 }
+
+html {
+    font-size: 62,5%;
+}
+
+body {
+    font-family: var(--body-font-family);
+    font-size: 1,6rem;
+    line-height: 1.5;
+    background-color: var(--light-color);
+    color: var(--dark-color);
+    overflow-x: hidden;
+}
+
+body.dark-theme{
+    --light-color: #000;
+    --dark-color: #fff;
+    --border-top-color: rgba(0,0,0,.1);
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+    outline: none;
+}
+
+img{
+    max-width: 100%;
+    display: block;
+}
+
+ul {
+    list-style: none;
+}
+
+span {
+    display: inline-block;
+}
+i {
+    font-size: 2,4rem;
+}
+input,
+button,
+textarea{
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
 /* 
 ?RADIAL GRADIENT
 ?background: radial-gradient(50% 50% at 50% 50%, rgba(255, 101, 118, .08) 0%, rgba(255, 101, 118, 0) 100%); 
 */
 /* !REUSABLE CLASSES */
+.container{
+    max-width: var(--container-width);
+    margin: 0 auto;
+    padding: 0 var(--container-padding);
+}
 
 /* !HEADER */
+.header{
+    margin-bottom: 5rem;
+}
 
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 8rem;
+    position: relative;
+}
+
+.logo{
+    font-family: var(--title-font-family);
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+.navbar-buttons {
+    display: flex;
+    column-gap: .5rem;
+    padding: 0 .5rem;
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    border-radius: .4rem;
+    position: relative;
+    z-index: 999;
+}
+
+.button{
+    cursor: pointer;
+}
+
+.icon-button{
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+}
+
+.icon-button{
+    margin: auto;
+}
+
+.close-icon,
+.theme-on{
+    display: none;
+}
+
+.menu{
+    position: absolute;
+    right: 1.55rem;
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    padding: .8rem 1.5rem;
+    border-radius: .4rem;
+    z-index: -1;
+}
+
+.list{
+    display: flex;
+    gap: 2.5rem;
+}
+
+.menu > .list .list-link{
+    text-transform: uppercase;
+}
+
+.list-link{
+    font-size: 1.4rem;
+}
+
+.list-link:hover,
+.list-link:focus{
+    opacity: .7;
+}
+
+.list-link span {
+    font-weight: bold;
+}
 /* !JAVASCRIPT STYLES */
 
 /* !HERO STYLES*/
